<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/drawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="24sp"
        android:text="@string/nav_title" />

    <TextView
        android:id="@+id/drawer_title_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:text="@string/nav_title_default" />

    <TextView
        android:id="@+id/drawer_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:text="@string/nav_title1"
        android:visibility="gone"/>

</LinearLayout>